[package]
name = "stumpalo"
description = "Local evm2 fork of stumpalo with explicit stack-frame commit and rollback"

version = "0.1.4"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = []
